--- a/witcher/contracts/templates/contracts/base.html
+++ b/witcher/contracts/templates/contracts/base.html
@@ -10,6 +10,7 @@
 <body>
     <nav>
         <a href="{% url 'home' %}">Home</a>
+        <a href="{% url 'contractcreate' %}">Dodaj Zlecenie</a>
     </nav>
     {% block content %}
     {% endblock %}
