--- a/witcher/contracts/templates/contracts/base.html
+++ b/witcher/contracts/templates/contracts/base.html
@@ -11,6 +11,7 @@
     <nav>
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'contractcreate' %}">Dodaj Zlecenie</a>
+        <a href="{% url 'login' %}">Zaloguj się</a>
     </nav>
     {% block content %}
     {% endblock %}
