--- a/witcher/contracts/templates/contracts/login.html
+++ b/witcher/contracts/templates/contracts/login.html
@@ -5,6 +5,7 @@
     <label for="login">Login:</label>
     <input type="text" name="login" placeholder="Login">
     <label for="password">Hasło:</label>
+    <input type="password" name="password" placeholder="Hasło">
     <input type="submit" name="" value="Zaloguj się">
 </form>
 {% endblock %}
