--- a/witcher/contracts/templates/contracts/login.html
+++ b/witcher/contracts/templates/contracts/login.html
@@ -1,3 +1,5 @@
+{% extends "./base.html" %}
+{% block title %}Logowanie{% endblock %}
 {% block content %}
 <h1>Zaloguj się</h1>
 <form method= "POST" action="{% url 'login' %}">
