Added simple conditional to check if user is logged or not -visualise different h1 tag, make additional changes to login.html, created signup.html and also created registration folder when signup.html and login.html was placed, added paths to urls.py about signup, logout, added function logout_view and class signup

--- a/witcher/contracts/templates/contracts/home.html
+++ b/witcher/contracts/templates/contracts/home.html
@@ -3,6 +3,15 @@
 Home Zlecenia
 {% endblock %}
 {% block content %}
-<h1>Witaj jestem wiedzmin Geralt</h1>
-<p>Tu w przyszlosci bedziesz mogl zlozyc zlecenie</p>
+    {% if user.is_authenticated %}
+        <h1>Witaj {{name}} jestem wiedzmin Geralt</h1>
+        <p>Tu w przyszlosci bedziesz mogl zlozyc zlecenie</p>
+        <a href="{% url 'logout' %}">Wyloguj</a>
+    {% else %}
+        <h1>Witaj nieznajomy - jestem wiedzmin Geralt</h1>
+        <p>Zaloguj sie aby utworzyc zlecenie</p>
+        <a href="{% url 'login' %}">Zaloguj</a>
+        <a href="{% url 'signup' %}">Zarejestruj sie</a>
+    {% endif %}
+
 {% endblock %}
