--- a/witcher/contracts/templates/registration/login.html
+++ b/witcher/contracts/templates/registration/login.html
@@ -1,11 +1,11 @@
-{% extends "./base.html" %}
+
 {% block title %}Logowanie{% endblock %}
 {% block content %}
 <h1>Zaloguj się</h1>
 <form method= "POST" action="{% url 'login' %}">
     {% csrf_token %}
-    <label for="login">Login:</label>
-    <input type="text" name="login" placeholder="Login">
+    <label for="username">Username:</label>
+    <input type="text" name="username" placeholder="Login">
     <label for="password">Hasło:</label>
     <input type="password" name="password" placeholder="Hasło">
     <input type="submit" name="" value="Zaloguj się">
