--- a/witcher/contracts/templates/contracts/base.html
+++ b/witcher/contracts/templates/contracts/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,7 @@
     <title>
         {% block title %}Zlecenia Wiedźmińskie{% endblock %}
     </title>
+    <link rel="stylesheet" href="{% static 'contracts/style.css' %}">
 </head>
 <body>
     <nav>
