--- a/witcher/contracts/templates/contracts/base.html
+++ b/witcher/contracts/templates/contracts/base.html
@@ -11,10 +11,18 @@
 </head>
 <body>
     <nav>
-        <a href="{% url 'home' %}">Home</a>
-        <a href="{% url 'contractlist' %}">Lista kontraktow</a>
-        <a href="{% url 'contractcreate' %}">Dodaj Zlecenie</a>
-        <a href="{% url 'login' %}">Zaloguj się</a>
+        <div class="logo">
+            <a href="{% url 'home' %}">
+            <img src="{% static 'contracts/images/logo.png' %}" alt="logo">
+            </a>
+        </div>
+        <div class="taskbar">
+            <ul>
+                <li><a id="task" href="{% url 'contractlist' %}">Lista kontraktów</a></li>
+                <li><a id="task" href="{% url 'contractcreate' %}">Dodaj zlecenie</a></li>
+                <li><a id="task" href="{% url 'login' %}">Zaloguj się</a></li>
+            </ul>
+        </div>
     </nav>
     {% block content %}
     {% endblock %}
