--- a/witcher/contracts/templates/contracts/home.html
+++ b/witcher/contracts/templates/contracts/home.html
@@ -1,4 +1,5 @@
 {% extends "./base.html" %}
+{% load static %}
 {% block title %}
 Home Zlecenia
 {% endblock %}
@@ -13,5 +14,6 @@ Home Zlecenia
         <a href="{% url 'login' %}">Zaloguj</a>
         <a href="{% url 'signup' %}">Zarejestruj sie</a>
     {% endif %}
+    <img src="{% static 'contracts/images/mainpicture.png' %}" alt="Body main">
 
 {% endblock %}
