--- a/witcher/contracts/templates/contracts/base.html
+++ b/witcher/contracts/templates/contracts/base.html
@@ -20,7 +20,13 @@
             <ul>
                 <li><a id="task" href="{% url 'contractlist' %}">Lista kontraktów</a></li>
                 <li><a id="task" href="{% url 'contractcreate' %}">Dodaj zlecenie</a></li>
-                <li><a id="task" href="{% url 'login' %}">Zaloguj się</a></li>
+                
+            </ul>
+        </div>
+        <div class="inout">
+            <ul>
+               <li><a id="in" href="{% url 'login' %}">Zaloguj się</a></li>
+               <li><a id="in" href="{% url 'signup' %}">Zarejestruj sie</a></li>
             </ul>
         </div>
     </nav>
@@ -28,7 +34,7 @@
     {% endblock %}
 
     <footer>
-        <p>Test</p>
+        <p>copyright Wiedzminskie Zlecenia</p>
     </footer>
 </body>
 </html>
