--- a/witcher/contracts/templates/contracts/base.html
+++ b/witcher/contracts/templates/contracts/base.html
@@ -18,14 +18,14 @@
         </div>
         <div class="taskbar">
             <ul>
-                <li><a id="task" href="{% url 'contractlist' %}">Lista kontraktów</a></li>
-                <li><a id="task" href="{% url 'contractcreate' %}">Dodaj zlecenie</a></li>
+                <li><a id="task" href="{% url 'contractlist' %}">Lista Kontraktow</a></li>
+                <li><a id="task" href="{% url 'contractcreate' %}">Dodaj Zlecenie</a></li>
                 
             </ul>
         </div>
         <div class="inout">
             <ul>
-               <li><a id="in" href="{% url 'login' %}">Zaloguj się</a></li>
+               <li><a id="in" href="{% url 'login' %}">Zaloguj sie</a></li>
                <li><a id="in" href="{% url 'signup' %}">Zarejestruj sie</a></li>
             </ul>
         </div>
