--- a/witcher/contracts/templates/contracts/base.html
+++ b/witcher/contracts/templates/contracts/base.html
@@ -7,7 +7,7 @@
     <title>
         {% block title %}Zlecenia Wiedźmińskie{% endblock %}
     </title>
-    <link rel="stylesheet" href="{% static 'contracts/style.css' %}">
+    <link rel="stylesheet" href="{% static 'contracts/css/style.css' %}">
 </head>
 <body>
     <nav>
