--- a/witcher/contracts/static/contracts/css/style.css
+++ b/witcher/contracts/static/contracts/css/style.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family:'Witcher';
-    src: url('./fonts/MasonSerifRegular.ttf') format('truetype');
+    src: url('../fonts/MasonSerifRegular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
