Additional changes in home.html and home.css, added backkground image with z-index:2 text for main page

--- a/witcher/contracts/templates/contracts/base.html
+++ b/witcher/contracts/templates/contracts/base.html
@@ -8,6 +8,8 @@
         {% block title %}Zlecenia Wiedźmińskie{% endblock %}
     </title>
     <link rel="stylesheet" href="{% static 'contracts/css/style.css' %}">
+    {% block page_css %}
+    {% endblock %}
 </head>
 <body>
     <nav>
