--- a/witcher/contracts/static/contracts/css/style.css
+++ b/witcher/contracts/static/contracts/css/style.css
@@ -9,6 +9,7 @@ body{
     font-family: Helvetica;
     font-size:22px;
     margin: 0 auto;
+    padding:0;
 }
 nav{
     background-color: black;
@@ -65,10 +66,8 @@ nav img{
     margin-left:30px;
 }
 #in{
-    font-size: 2rem;
+    font-size: 2.4rem;
     color:#b8b8b7;
-
-
 }
 #in:hover{
     color:crimson;
@@ -77,7 +76,7 @@ footer{
     display:flex;
     justify-content: center;
     align-items:center;
-    color:seashell;
+    color:#b8b8b7;
     margin-left:20px;
     opacity:0.9
 }
