navbar completed with responsive look, with menu, little animation, late commit with everything changed, tested and work, maybe font-sizes to change and height to change

--- a/witcher/contracts/static/contracts/css/home.css
+++ b/witcher/contracts/static/contracts/css/home.css
@@ -23,7 +23,13 @@ h1{
     position:relative;
     color:#b8b8b7;
     z-index: 2;
+    width:100%;
     max-width: 800px;
     text-align: center;
+
+}
+.content a{
+    display:inline-block;
+    text-decoration: none;
 
 }
