--- a/witcher/contracts/static/contracts/css/style.css
+++ b/witcher/contracts/static/contracts/css/style.css
@@ -4,79 +4,196 @@
     font-weight: normal;
     font-style: normal;
 }
+*{
+    box-sizing: border-box;
+}
+
+
 body{
     background-color: #1b1b2a;
     font-family: Helvetica;
     font-size:22px;
     margin: 0 auto;
-    padding:0;
-}
-nav{
-    background-color: black;
-    width: 100%;
-    display: flex;
-    align-items: center;
-
-
-    
-    
-    
-    
-}
-a{
-    font-family:'Witcher',serif;
-    text-decoration: none;
-    font-weight: 600;
-    font-size:2.4rem;
-}
-a:link, a:visited{
     color:#b8b8b7;
-
 }
-
-nav img{
-    height:40px;
-    margin-top:3px;
-    margin-left:20px;
-}
-.taskbar ul{
+.header{
+    position:fixed;
+    top:0;
+    left: 0;
+    width:100%;
+    padding:1.3rem 10%;
     display:flex;
-    justify-content:space-around;
-    width:700px;
-    margin-left:-10px;
-}
-#task,#in{
-    color:#b8b8b7;
-    
-    
-}
-#task:hover{
-    color:crimson;
-}
-.inout{
-    margin-left:auto;
-    margin-right:20px;
-}
-.inout ul{
-    display: flex;
-    
     justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    background-color:rgba(0,0,0,0.8);
+    backdrop-filter: blur(90px);
 }
-.inout ul li{
-    margin-left:30px;
+.header::before{
+    content:'';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color:rgba(0,0,0,0.8);
+    backdrop-filter: blur(80px);
+    z-index: -1;
 }
-#in{
-    font-size: 2.4rem;
+
+.logo img{
+    height:40px;
+    transition:height .25s ease;
+}
+.navbar a{
+    font-size: 2rem;
     color:#b8b8b7;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 2.5rem;
+    font-family: 'Witcher';
 }
-#in:hover{
-    color:crimson;
+#check{
+    display: none;
 }
-footer{
-    display:flex;
-    justify-content: center;
-    align-items:center;
+.icons{
+    position: absolute;
+    font-size: 2.8rem;
     color:#b8b8b7;
-    margin-left:20px;
-    opacity:0.9
+    cursor: pointer;
+    display: none;
+    right:5%;
+}
+
+@media (max-width:1770px){
+    body:not(.user-authenticated) .icons{
+        display: inline-flex;
+    }
+    body:not(.user-authenticated) #check:checked~.icons #menu-icon{
+        display:none;
+    }
+    body:not(.user-authenticated) .icons #close-icon{
+        display: none;
+    }
+    body:not(.user-authenticated) #check:checked~.icons #close-icon{
+        display: block;
+    }
+    body:not(.user-authenticated) .navbar{
+        position: absolute;
+        top:100%;
+        left:0;
+        width: 100%;
+        height: 0;
+        background-color:rgba(0,0,0,0.8);
+        backdrop-filter: blur(90px);
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,0.8);
+        overflow: hidden;
+        transition: height 0.4s ease;
+    }
+    body:not(.user-authenticated) #check:checked~.navbar{
+        height:16rem;
+    }
+    body:not(.user-authenticated) .navbar a{
+        display: block;
+        font-size: 1.3rem;
+        margin:1.5rem 0;
+        text-align: center;
+        transform: translateY(-50px);
+        opacity: 0;
+        transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+    body:not(.user-authenticated) #check:checked~.navbar a{
+        transform: translateY(0);
+        opacity: 1;
+        transition-delay: calc(.10s * var(--i));
+    }
+}
+@media (max-width:1394px){
+    body.user-authenticated .icons{
+        display: inline-flex;
+    }
+    body.user-authenticated #check:checked~.icons #menu-icon{
+        display:none;
+    }
+    body.user-authenticated .icons #close-icon{
+        display: none;
+    }
+    body.user-authenticated #check:checked~.icons #close-icon{
+        display: block;
+    }
+    body.user-authenticated .navbar{
+        position: absolute;
+        top:100%;
+        left:0;
+        width: 100%;
+        height: 0;
+        background-color:rgba(0,0,0,0.8);
+        backdrop-filter: blur(90px);
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,0.8);
+        overflow: hidden;
+        transition: height 0.4s ease;
+    }
+    body.user-authenticated #check:checked~.navbar{
+        height:13rem;
+    }
+    body.user-authenticated .navbar a{
+        display: block;
+        font-size: 1.3rem;
+        margin:1.5rem 0;
+        text-align: center;
+        transform: translateY(-50px);
+        opacity: 0;
+        transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+    body.user-authenticated #check:checked~.navbar a{
+        transform: translateY(0);
+        opacity: 1;
+        transition-delay: calc(.10s * var(--i));
+    }
+}
+@media (max-width:992px){
+    .header{
+        padding:1.3rem 5%;
+
+    }
+}
+@media (max-width:768px){
+    .icons{
+        display: inline-flex;
+    }
+    #check:checked~.icons #menu-icon{
+        display:none;
+    }
+    .icons #close-icon{
+        display: none;
+    }
+        #check:checked~.icons #close-icon{
+            display: block;
+        }
+    .navbar{
+        position: absolute;
+        top:100%;
+        left:0;
+        width: 100%;
+        height: 0;
+        background-color:rgba(0,0,0,0.8);
+        backdrop-filter: blur(90px);
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,0.8);
+        overflow: hidden;
+        transition: .3s ease;
+    }
+    #check:checked~.navbar{
+            height:17.7rem;
+        }
+    .navbar a{
+        display: block;
+        font-size: 1.1rem;
+        margin:1.5rem 0;
+        text-align: center;
+        transform: translateY(-50px);
+    }
+    #check:checked~.navbar a{
+        transform: translateY(0);
+        transition-delay: calc(.15s * var(--i));
+    }
 }
