--- a/witcher/contracts/templates/contracts/base.html
+++ b/witcher/contracts/templates/contracts/base.html
@@ -41,7 +41,7 @@
     {% endblock %}
 
     <footer>
-        <p>copyright Wiedzminskie Zlecenia</p>
+        <p>© 2025 Wiedźmińskie Kontrakty - All Rights Reserved</p>
     </footer>
 </body>
 </html>
