--- a/witcher/contracts/static/contracts/css/style.css
+++ b/witcher/contracts/static/contracts/css/style.css
@@ -52,6 +52,11 @@ body{
     font-weight: 500;
     margin-left: 2.5rem;
     font-family: 'Witcher';
+    transition: color 0.3s ease;
+}
+.navbar a:hover {
+    color:crimson;
+
 }
 #check{
     display: none;
@@ -63,6 +68,10 @@ body{
     cursor: pointer;
     display: none;
     right:5%;
+    transition: color 0.3s ease;
+}
+.icons:hover{
+    color:crimson;
 }
 
 footer{
