--- a/witcher/contracts/static/contracts/css/home.css
+++ b/witcher/contracts/static/contracts/css/home.css
@@ -1,19 +1,14 @@
-h1{
-    color:#b8b8b7;
-    
-}
-
 .homediv{
     position:relative;
     background-image:url("/static/contracts/images/mainpicture.png");
-    background-size:contain;
-    background-position:center;
+    background-size:cover;
     background-repeat:no-repeat;
-    background-position: top center;
+    background-position:center;
     display:flex;
     align-items:center;
     justify-content: center;
     min-height:950px;
+    min-height: 100vh;
     margin:0;
     padding:0;
     overflow:hidden;
@@ -23,13 +18,12 @@ h1{
     position:relative;
     color:#b8b8b7;
     z-index: 2;
-    width:100%;
-    max-width: 800px;
     text-align: center;
-
+    padding:20px;
 }
-.content a{
-    display:inline-block;
-    text-decoration: none;
-
+.content h1{
+    font-size: 3rem;
+    margin-bottom:2rem;
+    color:#b8b8b7;
+    text-shadow:2px 2px 4px rgba(0,0,0,0.8);
 }
