--- a/witcher/contracts/static/contracts/css/home.css
+++ b/witcher/contracts/static/contracts/css/home.css
@@ -27,3 +27,49 @@
     color:#b8b8b7;
     text-shadow:2px 2px 4px rgba(0,0,0,0.8);
 }
+.buttons{
+    display:flex;
+    gap:20px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.btn{
+    display: inline-block;
+    padding:15px 40px;
+    font-size:1.2rem;
+    font-weight: 600;
+    text-decoration: none;
+    border-radius:5px;
+    transition: all 0.3s ease;
+    cursor:pointer;
+}
+.btn-crimson{
+    background-color:#400000;
+    color:#b8b8b7;
+}
+.btn-crimson:hover{
+    
+    background-color: #800000;
+    transform:translateY(2px);
+    box-shadow:0 5px 15px rgba(102, 6, 25, 0.4);
+}
+.btn-crimson:active{
+    transform: scale(0.95);
+}
+.btn-dark{
+    background-color: #0a0909;
+    color:#b8b8b7;
+    
+}
+.btn-dark:hover{
+    /*#0a0909 */
+    background-color: #171616;
+    transform:translateY(2px);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+
+}
+.btn-dark:active{
+    transform: scale(0.95);
+
+}
