--- a/witcher/contracts/templates/registration/login.html
+++ b/witcher/contracts/templates/registration/login.html
@@ -1,13 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Logowanie</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'contracts/css/login.css' %}">
+</head>
+<body>
+    <div class="login-container">
+        <div class="login">
+            <div class="logo">
+                <img src="{% static 'contracts/images/logo.png' %}" alt="Logo" class="login-logo">
+            </div>
+            <h1>Logowanie</h1>
+            <form method= "POST" action="{% url 'login' %}">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" name="username" id="username" placeholder="Wprowadź login" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Hasło:</label>
+                    <input type="password" name="password" id="password" placeholder="Wprowadź hasło" required>
+                </div>
+                    <button type="submit" class="btn-login">Zaloguj się</button>
+            </form>
+            <div class="signup">
+                <p>Nie masz konta?</p>
+                <a href="{% url 'signup' %}">Zarejestruj się</a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
 
-{% block title %}Logowanie{% endblock %}
-{% block content %}
-<h1>Zaloguj się</h1>
-<form method= "POST" action="{% url 'login' %}">
-    {% csrf_token %}
-    <label for="username">Username:</label>
-    <input type="text" name="username" placeholder="Login">
-    <label for="password">Hasło:</label>
-    <input type="password" name="password" placeholder="Hasło">
-    <input type="submit" name="" value="Zaloguj się">
-</form>
-{% endblock %}
