--- a/witcher/contracts/templates/registration/login.html
+++ b/witcher/contracts/templates/registration/login.html
@@ -17,7 +17,7 @@
             <form method= "POST" action="{% url 'login' %}">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">Login:</label>
                     <input type="text" name="username" id="username" placeholder="Wprowadź login" required>
                 </div>
                 <div class="form-group">
