--- a/witcher/contracts/static/contracts/css/signup.css
+++ b/witcher/contracts/static/contracts/css/signup.css
@@ -81,6 +81,16 @@ body{
     margin-top:5px;
     text-align:center;
 }
+.signup form ul:not(.errorlist) {
+    display: block;
+    color:#888;
+    font-size:0.85rem;
+    margin-top:5px;
+    list-style: none;
+    text-align: center;
+    
+}
+
 .signup form .errorlist{
     list-style: none;
     color:crimson;
