Added LOGIN_URL to settings.py to point to 'login', added in models.py new attribute for contract -owner. Imported in views.py UpdateView, DeleteView, UserPassesTestMixin, added in views.py class Owner RequiredMixin to allow to view contract only owner of that contract, added ContractUpdate to update contract it allows user to update contract like pass correct reward amount or monster, added Contract delete to delete contract if monster accidently die, or there is no need to do this contract, added profileview to view profile with filter that check what is need to be shown by specific user so if user create contract this contract is attach to this specific user. Added profile.html with simple code to show contracts that was added by user, 3 columns with title, when created, and action to update by ContractUpdate and delete by ContractDelete. Added profile link to navbar in base.html. Exluded owner and time_created in forms.py so that user cannot change time and change user that is creating contract. Changed contract list table in contract_list.html to show owner of contract

--- a/witcher/contracts/templates/contracts/base.html
+++ b/witcher/contracts/templates/contracts/base.html
@@ -25,10 +25,12 @@
                 <a href="{% url 'contractlist' %}" style="--i:1;">Lista Kontraktow</a>
                 <a href="{% url 'contractcreate' %}" style="--i:2;">Dodaj Zlecenie</a>
                 
+                
             
         
             
                 {% if user.is_authenticated %}
+                    <a href="{% url 'profile' %}" style="--i:2;">Profil</a>
                     <a href="{% url 'logout' %}" style="--i:3;">Wyloguj</a>
                 {% else %}
                     <a id="in" href="{% url 'login' %}" style="--i:3;">Zaloguj sie</a>
