--- a/witcher/contracts/templates/contracts/profile.html
+++ b/witcher/contracts/templates/contracts/profile.html
@@ -12,11 +12,11 @@
   <div class="userinfo">
     <h2>Profil: <span class="username">{{user.username}}</span></h2>
   </div>
-  <div class="profil-head">
+  <div class="profilhead">
     <h1>Moje Kontrakty</h1>
   </div>
   <div class="table">
-    <table class="table-contract">
+    <table class="tablecontract">
       <thead>
         <tr>
           <th>Tytuł</th>
