Added css to contractlist, table looks similar to table in profile, added filters bar to filter by realm, time and reward, added simple resposive with media max width 1200px and media max width 768px and 480px, changed entire code from previous contractlist, instead added html with classes to point to css,with form method with get action to filter 3 options:newest,reward,realm. Added to contractlist function to query to sort by time, reward,realm_name. Added some load static to contract_create_form

--- a/witcher/contracts/templates/contracts/contract_create_form.html
+++ b/witcher/contracts/templates/contracts/contract_create_form.html
@@ -1,7 +1,10 @@
 {% extends "./base.html" %}
+{% load static %}
+
 {% block title %}
-formularz 
+Dodaj Zlecenie
 {% endblock %}
+
 {% block content %}
 <h1>Dodaj zlecenie</h1>
 <form method="POST">
